removed redundent code and fixed alignment with footer

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -22,8 +22,7 @@
 
 @media screen and (max-width: 665px) {
     .footer {
-      display: flex;
-      justify-content: center;
+      padding-left: 19px;
       padding-top: 48px;
       padding-bottom: 0;
     }
